# tegra-eeprom-tool

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  boardspec.c  boardspec.h  configure.ac  cvm.c  cvm.h  eeprom.c  eeprom.h  meson.build  tegra-boardspec.c  tegra-eeprom-tool.c  tegra-eeprom.pc.in
.reuse/: dep5
